--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="jumbotron">
-    <h1>.NET 💜 Azure</h1>
+    <h1>.NET ❣️💜❣️ Azure</h1>
     <p class="lead">Example .NET app to Azure App Service.</p>
 </div>
 
